--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 
 <head>
         <title>Fabian Tauriello</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet"
                 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet"
@@ -16,12 +17,18 @@
 <body>
 
         <header>
+                <!-- BACKGROUND PIC -->
                 <div id="background-pic">
                         <div id="background-pic-caption-container">
                                 <span>G'day</span><br>
                                 <span>Thanks for stopping by</span>
                         </div>
                 </div>
+                <!-- BACKGROUND PIC END -->
+        </header>
+
+        <!-- MAIN AREA -->
+        <main id="main">
                 <!-- NAV BAR -->
                 <ul id="navbar" class="m-0 p-0">
                         <li><a href="#contact-anchor">Contact</a></li>
@@ -31,71 +38,63 @@
                         <li><a class="active-nav-link" href="#">Home</a></li>
                 </ul>
                 <!-- NAV BAR END -->
-        </header>
 
-        <!-- MAIN AREA -->
-        <main id="main">
                 <!-- ABOUT SECTION -->
                 <div id="about-anchor"></div>
-                <section class="page-section bg-light" id="about">
-                        <div class="container-fluid">
-                                <h1 class="page-section-heading text-center">ABOUT</h1>
-                                <hr>
-                                <div class="justify-content-center">
-                                        <div id="profile-pic-container" class="p-0">
-                                                <img id="me" src="images/profile-pic.png" class="img-fluid"
-                                                        alt="Profile Picture">
+                <section id="about">
+                        <h1 class="page-section-heading text-center">ABOUT</h1>
+                        <hr class="section-hr">
+                        <div id="about-first-flex-container" class="border">
+                                <img id="about-img" src="images/profile-pic.png" class="" alt="Profile Picture">
+                                <div id="about-para-flex-container" class="border">
+                                        <div id="about-para-text" class="border">
+                                                <h3>Hi! My name is Fabian</h3>
+                                                <br>
+                                                <p id="profile-description" class="">
+                                                        I am a motivated and passionate software
+                                                        developer seeking an opportunity to
+                                                        progress my career in
+                                                        London’s dynamic tech industry. During
+                                                        my studies and
+                                                        experience working as a
+                                                        graduate software developer with a
+                                                        leading Australian
+                                                        university, I have developed my
+                                                        technical skills and am now
+                                                        ready to apply them in a new
+                                                        innovative workplace. I am excited about
+                                                        taking on a new career challenge in
+                                                        London.
+                                                </p>
                                         </div>
-                                        <div id="profile-card" class="">
-                                                <div class="">
-                                                        <div class="card-body">
-                                                                <p class="card-text text-justify">
-                                                                        I am a motivated and passionate software
-                                                                        developer seeking an opportunity to
-                                                                        progress my career in
-                                                                        London’s dynamic tech industry. During
-                                                                        my studies and
-                                                                        experience working as a
-                                                                        graduate software developer with a
-                                                                        leading Australian
-                                                                        university, I have developed my
-                                                                        technical skills and am now
-                                                                        ready to apply them in a new
-                                                                        innovative workplace. I am excited about
-                                                                        taking on a new career challenge in
-                                                                        London.
-                                                                </p>
-                                                                <a class="btn btn-xl btn-outline-dark"
-                                                                        href="docs/Curriculum Vitae.pdf" download>
-                                                                        Download my CV
-                                                                </a>
-                                                                <span class="fa-stack fa-lg">
-                                                                        <a href="#"
-                                                                                class="fa fa-circle fa-stack-2x icon-background"></a>
-                                                                        <a href="#"
-                                                                                class="fa fa-linkedin fa-stack-1x"></a>
-                                                                </span>
-                                                                <span class="fa-stack fa-lg">
-                                                                        <a href="#"
-                                                                                class="fa fa-circle fa-stack-2x icon-background"></a>
-                                                                        <a hred="#"
-                                                                                class="fa fa-github fa-stack-1x"></a>
-                                                                </span>
-                                                        </div>
+                                        <div id="about-para-buttons" class="border">
+                                                <div>
+                                                        <a id="download-CV-button" class="primary-button"
+                                                                href="docs/Curriculum Vitae.pdf" download>
+                                                                Download CV
+                                                        </a>
+                                                </div>
+                                                <div>
+                                                        <span id="linked-in-button" class="fa-stack fa-lg">
+                                                                <a href="#"
+                                                                        class="fa fa-circle fa-stack-2x icon-background"></a>
+                                                                <a href="#" class="fa fa-linkedin fa-stack-1x"></a>
+                                                        </span>
+                                                        <span id="github-button" class="fa-stack fa-lg">
+                                                                <a href="#"
+                                                                        class="fa fa-circle fa-stack-2x icon-background"></a>
+                                                                <a hred="#" class="fa fa-github fa-stack-1x"></a>
+                                                        </span>
                                                 </div>
                                         </div>
                                 </div>
-                                <div id="bio-details" class="justify-content-center">
-                                        <ul class="list-group list-group-horizontal colap">
-                                                <li class="list-group-item text-center">Software Developer</li>
-                                                <li class="list-group-item text-center">London, UK</li>
-                                                <li class="list-group-item text-center">ftauriello@hotmail.com
-                                                </li>
-                                                <li class="list-group-item text-center">07572093185</li>
-                                        </ul>
-
-                                </div>
                         </div>
+                        <ul id="about-second-flex-container" class="">
+                                <li class="text-center d-in border">Software Developer</li>
+                                <li class="text-center d-in border">London, UK</li>
+                                <li class="text-center d-in border">ftauriello@hotmail.com</li>
+                                <li class="text-center d-in border">07572093185</li>
+                        </ul>
                 </section>
                 <!-- ABOUT SECTION END -->
 
@@ -114,7 +113,7 @@
 
                 <!-- BLOG SECTION -->
                 <div id="blog-anchor"></div>
-                <section id="blog" class="container-fluid bg-light">
+                <section id="blog" class="bg-light">
                         <div class="">
                                 <h2>Blog</h2>
                                 <hr>
@@ -150,7 +149,7 @@
 
                 <!-- CONTACT SECTION -->
                 <div id="contact-anchor"></div>
-                <section id="contact" class="container-fluid">
+                <section id="contact" class="">
                         <div class="">
                                 <h2>Contact</h2>
                                 <!-- <p>Get in touch</p> -->
