--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,74 @@
-/* CLASS SELECTORS */
+/**************************************************************************************************************************/
 
-.active-nav-link {
-    background-color: #4CAF50;
+/* RESET AND SETUP ELEMENTS */
+
+/**************************************************************************************************************************/
+
+body {
+    font-family: 'Montserrat', sans-serif;
 }
 
-.d-in {
-    display: inline;
+html {
+    scroll-behavior: smooth;
+    height: 100%;
+    overflow-x: hidden;
+    /* width: 100%; */
 }
 
-.icon-background {
-    color: red;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/**************************************************************************************************************************/
+
+/* GENERAL */
+
+/**************************************************************************************************************************/
+
+p {
+    line-height: 1.6;
+}
+
+#about-anchor, #projects-anchor, #blog-anchor, #contact-anchor {
+    visibility: visible;
+    display: block;
+    height: 0px;
+    bottom: 50px;
+    position: relative;
+}
+
+section hr {
+    margin-bottom: 30px;
+}
+
+.bg-primary {
+    background-color: #157ffb;
+}
+
+.bg-dark {
+    background-color: #343a40;
+}
+
+.bg-light {
+    background-color: #f8f9fa;
+}
+
+.primary-button {
+    background-color: #157ffb;
+    border: none;
+    color: white;
+    padding: 12px 28px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border-radius: 5px;
 }
 
 .m-0 {
@@ -20,61 +79,50 @@
     padding: 0;
 }
 
-.page-section {}
-
 .page-section-heading {
-    font-size: 3.25rem;
-    line-height: 2rem;
+    padding-bottom: 10px;
+    padding-top: 5%;
+    text-align: center;
+    font-size: 50px;
 }
 
-.profile-description {
-    padding: 20px;
+.section-hr {
+    border: 1.5px solid black;
+    width: 25%;
 }
 
 .text-center {
     text-align: center;
 }
 
+/**************************************************************************************************************************/
+
 /* ELEMENT SELECTORS */
 
-body {
-    margin: 0px;
-}
+/**************************************************************************************************************************/
 
 h1 {
     font-family: 'Ubuntu', sans-serif;
-}
-
-hr {
-    border: 1.5px solid black;
-    width: 25%;
-}
-
-html {
-    scroll-behavior: smooth;
-    height: 100%;
-    overflow-x: hidden;
+    margin: 0px;
+    padding-top: 50px;
 }
 
 section {
-    /* min-height: 90vh; */
-    /* padding: 8rem 0; */
+    min-height: calc(100vh - 50px);
 }
 
-/* ID SELECTORS */
-
-#about {
-    /* background-color: #EFACAC; */
+ul {
+    list-style-type: none;
 }
 
-#about-anchor, #projects-anchor, #blog-anchor, #contact-anchor {
-    visibility: hidden;
-    display: block;
-    position: relative;
-}
+/**************************************************************************************************************************/
+
+/* HOME SECTION */
+
+/**************************************************************************************************************************/
 
 #background-pic {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/lobostudio-hamburg-359753-unsplash.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/bg.jpg);
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -88,65 +136,54 @@ section {
     text-align: center;
 }
 
-#bio-details {
-    margin-top: 10px;
-    width: 65%;
-}
+/**************************************************************************************************************************/
+
+/* BLOG SECTION */
+
+/**************************************************************************************************************************/
 
 #blog {
-    /* background-color: blue; */
+    background-color: red;
 }
+
+/**************************************************************************************************************************/
+
+/* CONTACT SECTION */
+
+/**************************************************************************************************************************/
 
 #contact {
-    /* background-color: red; */
+    background-color: rgb(211, 137, 77);
 }
 
-#me {
-    max-width: 200px;
-    border-radius: 10px;
+/**************************************************************************************************************************/
+
+/* NAVBAR */
+
+/**************************************************************************************************************************/
+
+.active-nav-link {
+    background-color: #4CAF50;
 }
 
 #navbar {
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-    list-style-type: none;
     overflow: hidden;
     background-color: #333;
-
-    position: -webkit-sticky; /* Safari */
+    position: -webkit-sticky;
     position: sticky;
-    top: 20px
-}
-
-#profile-card {
-    /* background-color: #3A1818; */
-    /* margin-left: 10px; */
-}
-
-#profile-description {}
-
-#profile-pic {}
-
-#profile-pic-container {
-    text-align: center;
-}
-
-#projects {
-
-}
-
-/* OTHER SELECTORS */
-
-.fa-lg:hover {
-    opacity: 0.5;
+    top: 0;
+    height: 50px;
 }
 
 #navbar a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 0px 15px;
     text-decoration: none;
     overflow: hidden;
+    height: 50px;
 }
 
 #navbar a:hover {
@@ -155,35 +192,110 @@ section {
 
 #navbar li {
     float: right;
+    height: 50px;
 }
 
-/* MEDIA QUERIES * /
+/**************************************************************************************************************************/
 
-@media (max-width: 600px) {}
+/* PROJECTS SECTION */
 
-@media (max-width: 768px) {}
+/**************************************************************************************************************************/
 
-@media (min-width:320px) {
-    /* smartphones, iPhone, portrait 480x320 phones */
-
+#projects {
+    background-color: blue;
 }
 
-@media (min-width:481px) {
-    /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
+/**************************************************************************************************************************/
+
+/* ABOUT SECTION */
+
+/**************************************************************************************************************************/
+
+#download-CV-button {
+    /* width: 30%; */
 }
 
-@media (min-width:641px) {
-    /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
+#github-button {
+    /* width: 5%; */
 }
 
-@media (min-width:961px) {
-    /* tablet, landscape iPad, lo-res laptops ands desktops */
+#linked-in-button {
+    /* width: 5%; */
 }
 
-@media (min-width:1025px) {
-    /* big landscape tablets, laptops, and desktops */
+#about-first-flex-container {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
+
+    display: flex;
+    flex-wrap: wrap;
 }
 
-@media (min-width:1281px) {
-    /* hi-res laptops and desktops */
+#profile-description {
+    /* float: left; */
+}
+
+#about-para-flex-container {
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.primary-button:hover {
+    background-color: #479dff;
+    color: white;
+}
+
+.fa-lg:hover {
+    opacity: 0.5;
+}
+
+#about-img {
+    /* border-radius: 10px 0 0 10px;*/
+    width: 200px;
+    /* float: left; */
+}
+
+#about-para-buttons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+#about {
+    /* background-color: rgb(9, 4, 98); */
+}
+
+#about-second-flex-container {
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#about-second-wrapper li {
+    padding: 10px;
+    flex: 1;
+    margin: 0 10px;
+}
+
+.icon-background {
+    color: red;
+}
+
+/* MEDIA QUERIES */
+
+/* remove later */
+
+.border {
+    border: solid 1px;
+}
+
+.in-bl {
+    display: inline-block;
 }
