about section changed to use bootstrap cards

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,9 @@
 
 <head>
         <title>Fabian Tauriello</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+                integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+                crossorigin="anonymous">
         <link rel="stylesheet"
                 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet"
@@ -44,7 +46,60 @@
                 <section id="about">
                         <h1 class="page-section-heading text-center">ABOUT</h1>
                         <hr class="section-hr">
-                        <div id="about-first-flex-container" class="border">
+                        <div id="about-card" class="card bg-light mb-3">
+                                <div class="row no-gutters">
+                                        <img id="about-img" src="images/profile-pic.png" class="col-md-3 card-img"
+                                                alt="profile picture">
+                                        <div class="col-md-9">
+                                                <div class="card-body border">
+                                                        <h5 class="card-title">Hi! My name is Fabian</h5>
+                                                        <p class="card-text"> I am a motivated and passionate software
+                                                                developer seeking an opportunity to
+                                                                progress my career in
+                                                                London’s dynamic tech industry. During
+                                                                my studies and
+                                                                experience working as a
+                                                                graduate software developer with a
+                                                                leading Australian
+                                                                university, I have developed my
+                                                                technical skills and am now
+                                                                ready to apply them in a new
+                                                                innovative workplace. I am excited about
+                                                                taking on a new career challenge in
+                                                                London.</p>
+                                                        <div id="about-para-buttons" class="border">
+                                                                <div>
+                                                                        <a id="download-CV-button"
+                                                                                class="btn btn-primary"
+                                                                                href="docs/Curriculum Vitae.pdf"
+                                                                                download>
+                                                                                Download CV
+                                                                        </a>
+                                                                </div>
+                                                                <div>
+                                                                        <span id="linked-in-button"
+                                                                                class="fa-stack fa-lg">
+                                                                                <a href="#"
+                                                                                        class="fa fa-circle fa-stack-2x icon-background"></a>
+                                                                                <a href="#"
+                                                                                        class="fa fa-linkedin fa-stack-1x"></a>
+                                                                        </span>
+                                                                        <span id="github-button" class="fa-stack fa-lg">
+                                                                                <a href="#"
+                                                                                        class="fa fa-circle fa-stack-2x icon-background"></a>
+                                                                                <a hred="#"
+                                                                                        class="fa fa-github fa-stack-1x"></a>
+                                                                        </span>
+                                                                </div>
+                                                        </div>
+                                                </div>
+                                        </div>
+                                </div>
+                        </div>
+
+
+
+                        <!-- <div id="about-first-flex-container" class="border">
                                 <img id="about-img" src="images/profile-pic.png" class="" alt="Profile Picture">
                                 <div id="about-para-flex-container" class="border">
                                         <div id="about-para-text" class="border">
@@ -88,7 +143,9 @@
                                                 </div>
                                         </div>
                                 </div>
-                        </div>
+                        </div> -->
+
+
                         <ul id="about-second-flex-container" class="">
                                 <li class="text-center d-in border">Software Developer</li>
                                 <li class="text-center d-in border">London, UK</li>
